--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,29 +1,52 @@
+<style>
+  .dashboard{background: transparent; text-decoration: none; color: white;}
+  .dashboard:hover{color: rgb(0, 238, 255);}
+</style>
 <div class="app-body">
-  <main class="main d-flex align-items-center">
+  
+  <main class="main d-flex align-items-center"
+    style="background-image: url('assets/img/Background-image/wp2715590.jpg');background-size: cover;">
     <div class="container">
+      <div style="margin-bottom: 50px;">
+        <a routerLink="/dashboard" class="dashboard"><i class="fa fa-chevron-circle-left fa-lg mt-4"></i> Return to Dashboard</a>
+      </div>
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="card-group">
-            <div class="card p-4">
+            <div style="background:rgba(0, 0, 0, 0.5);" class="card p-4">
               <div class="card-body">
-                <form>
-                  <h1>Login</h1>
-                  <p class="text-muted">Sign In to your account</p>
+                <form  [formGroup]="loginForm" (ngSubmit)="login()">
+                  <h1 style="color: white;">Sign In</h1>
+                  <p class="text-white">Sign In to your account</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-user"></i></span>
+                      <span class="input-group-text" style="background: transparent; color: white;">@</span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                    <input type="text" class="form-control" placeholder="E-mail" autocomplete="username" required
+                      style="background: transparent; color: white;" formControlName="email"
+                      [ngClass]="{ 'is-invalid': submitted && loginForm.controls.email.errors,
+                                   'is-valid': submitted && !loginForm.controls.email.errors }" >
+                      
+                      <div class="invalid-feedback d-block" *ngIf="submitted && loginForm.controls.email.hasError('required')" >
+                        The email is required.
+                      </div>
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-lock"></i></span>
+                      <span class="input-group-text" style="background: transparent; color: white;"><i class="icon-lock"></i></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" required>
+                    <input type="password" class="form-control" placeholder="Password" autocomplete="current-password"
+                      required style="background: transparent; color: white;" formControlName="password"
+                      [ngClass]="{ 'is-invalid': submitted && loginForm.controls.password.errors, 'is-valid': submitted && !loginForm.controls.password.errors }" >
+                      <div class="invalid-feedback d-block" *ngIf="submitted && loginForm.controls.password.hasError('required')">
+                        The password is required.
+                      </div>
+                      <div *ngIf="registerForm.controls.password.hasError('minlength')" class="invalid-feedback">The
+                        password must be more than 6 caracters please.</div>
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4">Login</button>
+                      <button type="submit" class="btn btn-primary px-4">Login</button>
                     </div>
                     <div class="col-6 text-right">
                       <button type="button" class="btn btn-link px-0">Forgot password?</button>
@@ -32,12 +55,103 @@
                 </form>
               </div>
             </div>
-            <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+            <div class="card text-white py-5 d-md-down-none" style="background:rgba(0, 0, 0, 0.3);width:44% ">
               <div class="card-body text-center">
                 <div>
                   <h2>Sign up</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
+                  <h4 style="margin-top: 50px; color: rgba(255, 255, 255, 0.781);">If you don't have an account click
+                    below.</h4>
+                  <button type="button" class="btn btn-primary active mt-3" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Register Now!</button>
+                </div>
+              </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content" style="background:rgba(255,255,255, 0.5);">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel" style="color: rgb(0, 204, 255);">Register Now !</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form [formGroup]="registerForm" (ngSubmit)="register()">
+                      <p class="text-white">Create your account</p>
+                      <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="icon-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="First name" autocomplete="firstname"
+                          formControlName="firstName"
+                          [ngClass]="{ 'is-invalid': submitted && registerForm.controls.firstName.errors, 'is-valid': submitted && !registerForm.controls.firstName.errors }">
+
+                        <div class="invalid-feedback d-block"
+                          *ngIf="submitted && registerForm.controls.firstName.hasError('required')">
+                          First name is required.
+                        </div>
+
+                      </div>
+                      <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="icon-user"></i></span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Last name" autocomplete="lastname"
+                          formControlName="lastName"
+                          [ngClass]="{ 'is-invalid': submitted && registerForm.controls.lastName.errors, 'is-valid': submitted && !registerForm.controls.lastName.errors }" >
+                        <div class="invalid-feedback d-block"
+                          *ngIf="submitted && registerForm.controls.lastName.hasError('required')">
+                          Last name is required.
+                        </div>
+                      </div>
+                      <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text">@</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="E-mail" autocomplete="email"
+                          formControlName="email"
+                          [ngClass]="{ 'is-invalid': submitted && registerForm.controls.email.errors, 'is-valid': submitted && !registerForm.controls.email.errors }" >
+
+                        <div *ngIf="registerForm.controls.email.hasError('required')" class="invalid-feedback">E-mail is
+                          required.</div>
+
+                      </div>
+                      <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="icon-lock"></i></span>
+                        </div>
+                        <input type="password" class="form-control" placeholder="Password" autocomplete="new-password"
+                          formControlName="password"
+                          [ngClass]="{ 'is-invalid': submitted && registerForm.controls.password.errors, 'is-valid': submitted && !registerForm.controls.password.errors }" >
+
+                        <div *ngIf="registerForm.controls.password.hasError('required')" class="invalid-feedback">
+                          Password is required.</div>
+                        <div *ngIf="registerForm.controls.password.hasError('minlength')" class="invalid-feedback">The
+                          password must be more than 8 caracters please.</div>
+
+                      </div>
+                      <div class="input-group mb-4">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="icon-lock"></i></span>
+                        </div>
+                        <input type="password" class="form-control" placeholder="Password confirmation"
+                          autocomplete="new-password" formControlName="passwordConfirmation"
+                          [ngClass]="{'is-invalid': submitted && registerForm.controls.passwordConfirmation.errors && registerForm.hasError('mismatch') , 'is-valid': submitted && !registerForm.controls.passwordConfirmation.errors && !registerForm.hasError('mismatch') }">
+                        <div class="invalid-feedback d-block">
+                          <div *ngIf="submitted && registerForm.controls.passwordConfirmation.hasError('required')">The
+                            password is required.</div>
+                          <div *ngIf="submitted && registerForm.controls.passwordConfirmation.hasError('minlength')" >The
+                            password must be more than 8 caracters.</div>
+                          <div *ngIf="submitted && registerForm.hasError('mismatch')">Password does not match</div>
+                        </div>
+                      </div>
+                      <button type="submit" class="btn btn-block btn-success">Create Account</button>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-warning" style="width: 30%; margin: auto;"
+                      data-bs-dismiss="modal">Close</button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -46,4 +160,6 @@
       </div>
     </div>
   </main>
-</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
