--- a/src/app/views/company/components/add-company/add-company.component.html
+++ b/src/app/views/company/components/add-company/add-company.component.html
@@ -1,11 +1,10 @@
 
-<main class="main d-flex align-items-center"
-style="background-image: url('/src/back\ ground.jpg');background-size: cover;">
-<div class="animated fadeIn">
+<div class="animated fadeIn"
+style="background-image: url('assets/img/Background-image/event.jpg');background-size: cover;">
     <div class="row">
         <div class="offset-3 col-6 ">
-            <div class="card">
-                <div class="card-header">
+            <div class="card" style="background:rgba(255, 255, 255, 0.336);">
+                <div class="card-header"style="background:rgba(255, 255, 255, 0.678);">
                     <strong>Company</strong>
                     <small>Form</small>
                 </div>
@@ -48,6 +47,7 @@ style="background-image: url('/src/back\ ground.jpg');background-size: cover;">
                             <div class="col-md-9">
                                 <input type="file" id="file-input" name="file-input">
                             </div>
+                            
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Add Company</button>
                         <button type="submit" class="btn btn-danger btn-block" routerLink="/companies">Cancel</button>
@@ -58,4 +58,3 @@ style="background-image: url('/src/back\ ground.jpg');background-size: cover;">
         </div>
     </div>
 
-</main>
