--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -1,1 +1,60 @@
-<button routerLink="/companies/add-company">add</button>
+<button routerLink="/companies/add-company">add
+    <i class="fa fa-cart-plus fa-lg mt-4"></i></button> 
+    <!-- <div class="animated fadeIn">
+        <div class="card">
+          <div class="card-header">
+            Company List
+           
+          </div>
+          <div class="card-body">
+            <div class="row mb-3">
+              <div class="col-md-4 offset-md-8">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-search"></i></span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Search by name"/>
+                </div>
+              </div>
+            </div>
+            <table class="table table-striped table-hover table-responsive-lg" [mfData]="data | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="10">
+              <thead>
+                <tr>
+                  <th style="width: 20%">
+                    <mfDefaultSorter by="companyName">Company Name</mfDefaultSorter>
+                  </th>
+                  <th style="width: 35%">
+                    <mfDefaultSorter by="companyDescription">Company Description</mfDefaultSorter>
+                  </th>
+                  <th style="width: 10%">
+                    <mfDefaultSorter by="email">email</mfDefaultSorter>
+                  </th>
+                  <th style="width: 20%">
+                    <mfDefaultSorter by="role">role</mfDefaultSorter>
+                  </th>
+                  <th style="width: 10%">
+                    <mfDefaultSorter by="city">Registered</mfDefaultSorter>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let company of mf.data">
+                  <td>{{company.name}}</td>
+                  <td>{{company.email}}</td>
+                  <td class="text-left">{{company.age}}</td>
+                  <td>{{company.city | uppercase}}</td>
+                  <td>{{getDate(company.regDate)}}</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="5">
+                    <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
+                  </td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
+        </div>
+      </div>
+       -->
